[package]
name = "iota-streams-ddml"
version = "0.2.3"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "ddml"]
description = "A rust implementation of the IOTA Streams DDML"

[features]
default = ["std"]
# enable std
std = ["rand/std", "iota-streams-core/std", "iota-streams-core-edsig/std"]

[lib]
name = "iota_streams_ddml"
path = "src/lib.rs"

[dependencies]
iota-streams-core = { version = "0.3.1", path = "../iota-streams-core", default-features = false }
iota-streams-core-edsig = { version = "0.2.1", path = "../iota-streams-core-edsig", default-features = false }
# anyhow version is kept in sync with iota-client
rand = { version = "0.7", default-features = false }
hashbrown = { version = "0.8.2", default-features = false, optional = false, features = ["ahash"] }

[dev-dependencies]
iota-streams-core-keccak = { version = "0.3.1", path = "../iota-streams-core-keccak" }
