[package]
name = "iota-streams-ddml"
version = "0.2.3"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "ddml"]
description = "A rust implementation of the IOTA Streams DDML"

[features]
default = ["std"]
# enable std
std = ["iota-streams-core/std"]

[lib]
name = "iota_streams_ddml"
path = "src/lib.rs"

[dependencies]
iota-streams-core = { version = "0.3.1", path = "../iota-streams-core", default-features = false, features = ["keccak"] }
# anyhow version is kept in sync with iota-client
hashbrown = { version = "0.8.2", default-features = false, optional = false, features = ["ahash"] }
