[package]
name = "iota-streams-ddml"
version = "0.1.2"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>", "Arnau Orriols <arnau.orriols@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "ddml"]
description = "A rust implementation of the IOTA Streams DDML"

[features]
default = ["std"]
# enable std
std = ["rand/std", "iota-streams-core/std"]

[dependencies]
iota-streams-core = { version = "0.1.2", path = "../iota-streams-core", default-features = false }
rand = { version = "0.8", default-features = false }
hashbrown = { version = "0.8.2", default-features = false, optional = false, features = ["ahash"] }
iota-crypto = { version = "0.9.1", default-features = false, features = ["x25519", "rand"] }