[package]
name = "iota-streams-protobuf3"
version = "0.1.0"
authors = ["Vlad Semenov <vlad.semenov@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "protobuf3"]
description = "A rust implementation of the IOTA Streams Protobuf3"

[lib]
name = "iota_streams_protobuf3"
path = "src/lib.rs"

[dependencies]
iota-streams-core = { version = "0.1.0", path = "../iota-streams-core" }
iota-streams-core-ntru = { version = "0.1.0", path = "../iota-streams-core-ntru" }
iota-streams-core-mss = { version = "0.1.0", path = "../iota-streams-core-mss" }
failure = "0.1"
