[package]
name = "iota-streams-protobuf3"
version = "0.2.0"
authors = ["Vlad Semenov <vlad.semenov@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "protobuf3"]
description = "A rust implementation of the IOTA Streams Protobuf3"

[lib]
name = "iota_streams_protobuf3"
path = "src/lib.rs"

[dependencies]
iota-streams-core = { version = "0.2.0", path = "../iota-streams-core" }
iota-streams-core-edsig = { version = "0.1.0", path = "../iota-streams-core-edsig" }
anyhow = "1.0.26"
# digest version should correspond to curve25519-dalek's version
digest = { version = "0.9.0", default-features = false }
rand = "0.7"

[dev-dependencies]
iota-streams-core-keccak = { version = "0.2.0", path = "../iota-streams-core-keccak" }
