[package]
authors = [
  "Vlad Semenov <vlad.semenov@iota.org>",
  "Dyrell Chapman <dyrell.chapman@iota.org>",
  "Brord van Wierst <brord@iota.org>",
  "Arnau Orriols <arnau.orriols@iota.org>",
]
description = "A Rust framework for developing cryptographic communication protocols"
edition = "2018"
keywords = ["iota", "LETS Framework", "LETS", "Streams", "Communication Protocol"]
license = "Apache-2.0/MIT"
name = "lets"
readme = "README.md"
version = "0.1.2"

[features]
default = ["utangle-client"]
# Enable the IOTA-Tangle transport client (implies `std` features)
tangle-client = ["iota-client/async", "futures", "iota-crypto/blake2b"]
# Enable the wasm-compatible IOTA-Tangle transport client (incompatile with `tangle-client` feature due to `iota-client/async` using `tokio`. Implies `std` feature)
tangle-client-wasm = ["iota-client/wasm", "futures"]
# Enable the Streams-specific uTangle Client
utangle-client = ["reqwest", "bee-ternary", "serde", "rayon"]
# Enable Iota Identity for use with Streams
did = ["identity_iota", "serde"]

[dependencies]
# Local dependencies
# TODO: remove osrng feature once x25519 is not performed here
spongos = {path = "../spongos", default-features = false, features = ["osrng"]}

# IOTA dependencies
iota-crypto = {version = "0.9.1", default-features = false, features = ["x25519", "ed25519", "sha"]}

# 3rd-party dependencies
anyhow = {version = "1.0", default-features = false}
async-trait = {version = "0.1", default-features = false}
hex = {version = "0.4", default-features = false}

# Optional dependencies
bee-ternary = {version = "0.5.2", default-features = false, optional = true}
futures = {version = "0.3.8", default-features = false, optional = true}
identity_iota = {git = "https://github.com/iotaledger/identity.rs", rev = "d3920c2", default-features = false, optional = true}
iota-client = {version = "1.1.1", default-features = false, optional = true}
parking_lot = {version = "0.11.2", default-features = false, optional = true}
reqwest = {version = "0.11.11", default-features = false, optional = true}
serde = {version = "1.0", default-features = false, features = ["derive"], optional = true}
spin = {version = "0.9.2", default-features = false, features = ["mutex", "spin_mutex"], optional = true}
rayon = {version = "1.5.3", default-features = false, optional = true}

[dev-dependencies]
chrono = {version = "0.4.19", default-features = false, features = ["clock"]}
criterion = {version = "0.3.5", features = ["async_tokio", "html_reports"]}
serde_json = {version = "1.0.81", default-features = false}
tokio = {version = "1.19.2", default-features = false}

[[bench]]
harness = false
name = "tangle_clients"
required-features = ["tangle-client", "utangle-client"]
