[package]
authors = [
  "Vlad Semenov <vlad.semenov@iota.org>",
  "Dyrell Chapman <dyrell.chapman@iota.org>",
  "Brord van Wierst <brord@iota.org>",
  "Arnau Orriols <arnau.orriols@iota.org>",
]
description = "A Rust framework for developing cryptographic communication protocols"
edition = "2018"
keywords = ["iota", "LETS Framework", "LETS", "Streams", "Communication Protocol"]
license = "Apache-2.0/MIT"
name = "lets"
readme = "README.md"
version = "0.1.2"

[features]
default = ["tangle-client", "did"]
# Enable the IOTA-Tangle transport client (implies `std` features)
tangle-client = ["iota-client/async", "futures", "iota-crypto/blake2b"]
# Enable the wasm-compatible IOTA-Tangle transport client (incompatile with `tangle-client` feature due to `iota-client/async` using `tokio`. Implies `std` feature)
tangle-client-wasm = ["iota-client/wasm", "futures"]
# Enable Iota Identity for use with Streams
did = ["identity", "serde"]

[dependencies]
# Local dependencies
# TODO: remove osrng feature once x25519 is not performed here
spongos = {path = "../spongos", default-features = false, features = ["osrng"]}

# IOTA dependencies
iota-crypto = {version = "0.9.1", default-features = false, features = ["x25519", "ed25519", "sha"]}

# 3rd-party dependencies
anyhow = {version = "1.0", default-features = false}
async-trait = {version = "0.1", default-features = false}
hex = {version = "0.4", default-features = false}

# Optional dependencies
futures = {version = "0.3.8", default-features = false, optional = true}
identity = {git = "https://github.com/iotaledger/identity.rs", rev = "86edaad", default-features = false, features = ["async"], optional = true}
iota-client = {version = "1.1.1", default-features = false, optional = true}
serde = {version = "1.0", default-features = false, features = ["derive"], optional = true}
