[package]
name = "spongos"
version = "0.1.2"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>", "Arnau Orriols <arnau.orriols@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "spongos", "streams", "encoding", "binary", "serialization"]
description = "A Rust implementation of the cryptographic de/serialization library Spongos"

[features]
default = []
std = ["rand/std", "rand/std_rng"]
sync-spin = ["spin"]
sync-parking-lot = ["parking_lot"]

[dependencies]
# IOTA Dependencies
iota-crypto = { version = "0.9.1", default-features = false, features = ["ed25519", "x25519", "rand"] }
# TODO: REMOVE
# iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", features = ["blake2b"], branch = "dev" }

# 3rd-party dependencies 
# TODO: REMOVE UNUSED
digest = { version = "0.9", default-features = false }
rand = { version = "0.8", default-features = false }
keccak = { version = "0.1", default-features = false }
hashbrown = { version = "0.11.2", default-features = false, optional = false, features = ["ahash"] }
hex = { version = "0.4", default-features = false, optional = false, features = ["alloc"] }
anyhow = { version = "1.0", default-features = false, features = ["std"], optional = false }
async-trait = { version = "0.1", optional = false }
parking_lot = { version = "0.11.2", optional = true }
spin = { version = "0.9.2", default-features = false, features = ["mutex", "spin_mutex"], optional = true }
rustversion = "1.0"
generic-array = {version = "0.14", default-features = false }

# thiserror = { version = "1.0.22", default-features = false, optional = false }
displaydoc = { version = "0.2", default-features = false, optional = false }

# TODO: REMOVE
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
# TODO: REMOVE?
criterion = "0.3"

