[package]
authors = [
  "Vlad Semenov <vlad.semenov@iota.org>",
  "Dyrell Chapman <dyrell.chapman@iota.org>",
  "Brord van Wierst <brord@iota.org>",
  "Arnau Orriols <arnau.orriols@iota.org>",
]
description = "A Rust implementation of the IOTA Streams protocol"
edition = "2018"
keywords = ["iota", "streams", "app", "channels", "pub-sub", "communication protocol"]
license = "Apache-2.0/MIT"
name = "streams"
readme = "README.md"
version = "0.2.0"

[features]
default = ["utangle-client", "std"]
std = ["lets/std", "spongos/std"]
did = ["lets/did"]
# Enable re-export of uTangle transport client from LETS
utangle-client = ["lets/utangle-client"]
# Enable re-export of IOTA-Tangle transport client from LETS
tangle-client = ["lets/tangle-client"]
# Enable re-export of wasm-compatible IOTA-Tangle transport client from LETS (incompatile with `tangle-client` feature due to `iota-client/async` using `tokio`)
tangle-client-wasm = ["lets/tangle-client-wasm"]

[dependencies]
# Local dependencies
lets = {path = "../lets", default-features = false}
spongos = {path = "../spongos", default-features = false}

# IOTA dependencies
iota-crypto = {version = "0.9.1", default-features = false}

# 3rd-party dependencies
anyhow = {version = "1.0", default-features = false}
async-recursion = {version = "1", default-features = false}
async-trait = {version = "0.1", default-features = false}
futures = {version = "0.3.8", default-features = false}
hashbrown = {version = "0.12.0", default-features = false, features = ["ahash"]}
rand = {version = "0.8.5", default-features = false}

# Error
thiserror-no-std = {version = "2.0.2", default-features = false}
serde = {version = "1", default-features = false}

[dev-dependencies]
dotenv = {version = "0.15.0", default-features = false}
hex = {version = "0.4.3", default-features = false}
identity_iota = {git = "https://github.com/iotaledger/identity.rs", rev = "d3920c2"}
rand = {version = "0.8.5", default-features = false, features = ["std", "std_rng"]}
lets = {path = "../lets", features = ["tangle-client"]}
textwrap = {version = "0.15.0", default-features = false}
tokio = {version = "1.15", default-features = false}

[[example]]
name = "full-example"
