[package]
name = "streams-c-binding"
version = "1.0.1"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>"]
edition = "2018"

[features]
default = ["std", "client"]
std = ["iota-streams/std"]
client = ["tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "iota_streams_c"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
iota-streams = {path = "../../", default-features = false, features = ["tangle"]}
tokio = {version = "1.9.0", optional = true}

hex = "0.4"
