[package]
name = "streams-c-binding"
version = "0.1.2"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>", "Arnau Orriols <arnau.orriols@iota.org>"]
edition = "2018"

[features]
default = ["std", "client"]
std = ["iota-streams/std"]
client = ["iota-streams/client"]
use-did = ["iota-streams/use-did"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "iota_streams_c"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
iota-streams = {path = "../../", default-features = false, features = ["tangle"]}
tokio = {version = "1.9.0", features = ["rt", "rt-multi-thread"]}
once_cell = "1.8.0"

hex = "0.4"
