[package]
name = "streams"
version = "0.1.2"
authors = ["huhn511 <huhn@einfachIOTA.de>", "Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>", "Arnau Orriols <arnau.orriols@iota.org>"]
edition = "2018"
repository = "https://github.com/iotaledger/streams"
homepage = "https://wiki.iota.org/streams/libraries/wasm/overview"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# wasm-bindgen version 0.2.77 adds support for From<usize> for JsValue,
# and proper async return types for Typescript and documentation
wasm-bindgen = "0.2.77"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
# js-sys version 0.3.55 implements `Extend<A: AsRef<JsValue>> for Array` which we need to build one the `Messages` stream.
js-sys = "0.3.55"

serde = { version = "1.0", features = ["derive"] }
iota-streams = {path = "../../", default-features = false, features = ["tangle", "wasm-client"]}
client-wasm = { git = "https://github.com/iotaledger/iota.rs", rev  = "ee19ec4", default-features = false }

# Needed to specify the js/wasm feature for a sub-crate
getrandom = {version = "0.2.2", features = ["js"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
